[package]
name = "repo-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
async-trait = { version = "0.1.77", optional = true }
futures-core = { version = "0.3.26", optional = true }
mysql_async = { version = "0.33.0", optional = true }
mysql_common = { version = "0.31.0", features = ["chrono"], optional = true }
sqlx = { version = "0.7.2", features = ["mysql", "chrono", "macros"], optional = true }
tokio = { version = "1.35.1", optional = true}

[features]
mysql_async_helper = ["async-trait", "futures-core", "mysql_async", "mysql_common", "tokio"]
sqlx_mysql_helper = ["async-trait", "futures-core", "sqlx", "tokio"]
